--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="about" id="about">
         <div class="container">
             <div class="profile-img" >
-                <img src="images/profile.png" data-aos="fade-up" data-aos-delay="250ms" alt="Profile-photo">                
+                <img src="images/profilejpg" data-aos="fade-up" data-aos-delay="250ms" alt="Profile-photo">                
             </div>
             <div class="about-details" data-aos="fade-up" data-aos-delay="300ms" >
                 <div class="about-heading">
