--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
           
                     <h3>FrontEnd Development</h3>
                     <p>
-                        <img src="./docs/certificate-image/Responsive-web-design.png" alt="freeCodeCamp Web Development"/>
+                        <img src="./docs/certificate-image/machine-learning.png" alt="SkillUP Machine Learning"/>
                     </p>
                     <br>
-                    <a href="./docs/ResponsiveWebDesign.pdf" class="cta">View Certificate</a>
+                    <a href="https://www.simplilearn.com/skillup-certificate-landing?token=eyJjb3Vyc2VfaWQiOiI2ODciLCJjZXJ0aWZpY2F0ZV91cmwiOiJodHRwczpcL1wvY2VydGlmaWNhdGVzLnNpbXBsaWNkbi5uZXRcL3NoYXJlXC90aHVtYl83MzgyMzg4XzE3MjY2NTY1NzQucG5nIiwidXNlcm5hbWUiOiJWYXJtYSBSYXRuZXNoIn0%3D&referrer=https%3A%2F%2Flms.simplilearn.com%2Fcourses%2F2789%2FMachine-Learning-using-Python%2Fcertificate%2Fdownload-skillup&%24web_only=true" class="cta">View Certificate</a>
                 </div>
                 <div class="skill" data-aos="fade-right" data-aos-delay="600ms">
                 
