--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@
             </div>
             <div class="portfolio-item" data-aos="fade-in" data-aos-duration="300ms">
                 <div class="portfolio-img has-margin-right">
+                    <img src="images/omnicore.png" alt="Omnicore Exports">
+                </div>
+                <div class="portfolio-description">
+                    <h6>Project 3</h6>
+                    <h1>OmniCore Exports</h1>
+                    <p>
+                        An informative nutraceuticals website crafted and developed to get accurate information of the medicinal herbs.
+                    </p>
+                    <a href="https://hashtag2000.github.io/OmniCore-Exports/" class="cta">View Project</a>
+                </div>
+            </div>
+            <div class="portfolio-item" data-aos="fade-in" data-aos-duration="300ms">
+                <div class="portfolio-img has-margin-right">
                     <img src="images/game.png" alt="2048-Game">
                 </div>
                 <div class="portfolio-description">
@@ -192,28 +205,14 @@
                     <h6>Project 2</h6>
                     <h1>Weather App</h1>
                     <p>
-                        A straightforward weather app developed using React.js, offering essential weather information in a simple and user-friendly interface.
+                        A basic weather app developed using React.js, offering essential weather information in a simple and user-friendly interface.
                     </p>
                     <a href="https://github.com/HashtaG2000/weather-app/blob/main/README.md" class="cta">View Project</a>
                 </div>
                 <div class="portfolio-img has-margin-left">
                     <img src="images/mumbai.png" alt="Weather-App">
                 </div>
-            </div>
-            <div class="portfolio-item" data-aos="fade-in" data-aos-duration="300ms">
-                <div class="portfolio-img has-margin-right">
-                    <img src="images/amazon.png" alt="Login-Page">
-                </div>
-                <div class="portfolio-description">
-                    <h6>Project 3</h6>
-                    <h1>Amazon Login Page</h1>
-                    <p>
-                        A meticulously crafted Amazon login page, mirroring the interface and functionality of the original platform with precision.
-                    </p>
-                    <a href="https://hashtag2000.github.io/Amazon-Prime_Login-Page/" class="cta">View Project</a>
-                </div>
-            </div>
-            
+            </div>            
         </div>
     </section>
 
